--- a/setup.cfg
+++ b/setup.cfg
@@ -9,24 +9,26 @@ nocapture=1
 where=ckanext/shibboleth
 
 # Babel configuration
-[compile_catalog]
-domain = ckan
-directory = ckanext/repoze/who/shibboleth/i18n
-statistics = true
 
 [extract_messages]
 keywords = translate isPlural
 add_comments = TRANSLATORS:
-output_file = ckanext/repoze/who/shibboleth/i18n/shibboleth.pot
+output_file = ckanext/shibboleth/i18n/ckanext-shibboleth.pot
 width = 80
 
 [init_catalog]
-domain = ckan
-input_file = ckanext/repoze/who/shibboleth/i18n/shibboleth.pot
-output_dir = ckanext/repoze/who/shibboleth/i18n
+domain = ckanext-shibboleth
+input_file = ckanext/shibboleth/i18n/ckanext-shibboleth.pot
+output_dir = ckanext/shibboleth/i18n
 
 [update_catalog]
-domain = ckan
-input_file = ckanext/repoze/who/shibboleth/i18n/shibboleth.pot
-output_dir = ckanext/repoze/who/shibboleth/i18n
+domain = ckanext-shibboleth
+input_file = ckanext/shibboleth/i18n/ckanext-shibboleth.pot
+output_dir = ckanext/shibboleth/i18n
 previous = true
+
+[compile_catalog]
+domain = ckanext-shibboleth
+directory = ckanext/shibboleth/i18n
+statistics = true
+
