Restructure directory tree

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ with-pylons = test-core.ini
 ckan=1
 verbosity=3
 with-coverage=1
-cover-package=ckanext.repoze.who.shibboleth
+cover-package=ckanext.shibboleth
 detailed-errors=1
 nocapture=1
 where=ckanext/shibboleth
